<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">
    <View
        android:id="@+id/vHeadBackgroundAbout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/viewHeader"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_about_aplication"
            />

        <TextView
            android:id="@+id/tvJudulAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/aboutAplication"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/cardViewBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/tvAboutAplicationIntent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_halaman"
                android:fontFamily="@font/capriola"
                android:textColor="@color/textSecondary"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ket_halaman_paragraf1"
                android:textColor="@color/textSecondary"
                android:textSize="17sp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ket_halaman_paragraf2"
                android:textColor="@color/textSecondary"
                android:textSize="17sp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medsos"
                android:fontFamily="@font/capriola"
                android:textColor="@color/textSecondary"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/ivGithub"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/github"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:id="@+id/ivInstagram"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/instagram"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:id="@+id/ivLinkedin"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/linkedin"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>